# PyORBIT3

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Doxyfile  PIP.md  README.md  docs-environment.yml  environment.yml  errors_2023_04_13.txt  meson.build  meson_options.txt  pyproject.toml  requirements.txt  setup.py  setupEnvironment.sh  sonar-project.properties
ext/danilov_envelope/: DanilovEnvelopeSolver20.cc  DanilovEnvelopeSolver20.hh  DanilovEnvelopeSolver22.cc  danilov_envelope.cc  meson.build  wrap_DanilovEnvelopeSolver20.cc  wrap_DanilovEnvelopeSolver20.hh  wrap_DanilovEnvelopeSolver22.cc  wrap_DanilovEnvelopeSolver22.hh  wrap_danilov_envelope.cc  wrap_danilov_envelope.hh
py/orbit/: __init__.py  meson.build
py/orbit/aperture/: ApertureLatticeModifications.py  ApertureLatticeRangeModifications.py  TeapotApertureNode.py  __init__.py  meson.build
py/orbit/bumps/: BumpLatticeModifications.py  TeapotBumpNode.py  __init__.py  bumps.py  meson.build
py/orbit/bunch/: Bunch.py  __init__.py  meson.build
py/orbit/bunch_generators/: __init__.py  distribution_generators.py  meson.build
py/orbit/bunch_utils/: __init__.py  collect_bunch.py  file_handler.py  meson.build  particleidnumber.py  serialize.py
py/orbit/collimation/: TeapotCollimatorNode.py  __init__.py  collimationLatticeModifications.py  meson.build
py/orbit/core/: __init__.py  meson.build
py/orbit/danilov_envelope/: __init__.py  danilov_envelope_20.py  danilov_envelope_22.py  danilov_envelope_solver_lattice_modifications.py  danilov_envelope_solver_nodes.py  meson.build  transfer_matrix.py  utils.py
py/orbit/diagnostics/: TeapotDiagnosticsNode.py  __init__.py  diagnostics.py  diagnosticsLatticeModifications.py  histogram.py  meson.build  profiles.py
py/orbit/envelope/: __init__.py  danilov.py  danilov_20.py  danilov_22.py  danilov_env_solver_lattice_modifications.py  danilov_env_solver_nodes.py  kv.py  (+8 more)
src/: MakefileMain  meson.build
src/core/: aperture_init.cc  bunch_init.cc  collimator_init.cc  envelope_init.cc  error_base_init.cc  field_sources_init.cc  fieldtracker_init.cc  foil_init.cc  impedances_init.cc  linac_init.cc  mpi_init.cc  rfcavities_init.cc  spacecharge_init.cc  teapot_base_init.cc  trackerrk4_init.cc  type_accessors.cc  utils_init.cc
src/danilov_envelope/: DanilovEnvelopeSolver22.cc  DanilovEnvelopeSolver22.hh
src/envelope/: Danilov20EnvelopeSolver.cc  Danilov20EnvelopeSolver.hh  DanilovEnvelopeTracker.cc  DanilovEnvelopeTracker.hh  EnvSolverDanilov.cc  EnvSolverDanilov.hh  EnvSolverDanilov20.cc  EnvSolverDanilov20.hh  EnvSolverDanilov22.cc  EnvSolverDanilov22.hh  EnvSolverKV.cc  EnvSolverKV.hh  KVEnvelopeTracker.cc  KVEnvelopeTracker.hh  wrap_danilov_20_envelope_solver.hh  wrap_danilov_22_envelope_solver.cc  wrap_danilov_22_envelope_solver.hh  wrap_danilov_envelope_tracker.cc  wrap_danilov_envelope_tracker.hh  wrap_env_solver_danilov.cc  wrap_env_solver_danilov.hh  wrap_env_solver_danilov_20.cc  wrap_env_solver_danilov_20.hh  wrap_env_solver_danilov_22.cc  wrap_env_solver_danilov_22.hh  wrap_env_solver_kv.cc  wrap_env_solver_kv.hh  wrap_envelope.cc  wrap_envelope.hh  wrap_kv_envelope_tracker.cc  wrap_kv_envelope_tracker.hh
src/libmain/: libmain.cc
src/linac/: wrap_linacmodule.cc  wrap_linacmodule.hh
src/main/: main.cc  pyORBIT_Object.hh
src/mpi/: orbit_mpi.cc  orbit_mpi.hh  wrap_mpi_comm.cc  wrap_mpi_comm.hh  wrap_mpi_datatype.cc  wrap_mpi_group.cc  wrap_mpi_group.hh  wrap_mpi_op.cc  wrap_mpi_request.cc  wrap_mpi_status.cc  wrap_orbit_mpi.cc  wrap_orbit_mpi.hh  wrap_orbit_mpi_comm_functions.hh  wrap_orbit_mpi_graph_functions.hh  wrap_orbit_mpi_group_functions.hh  wrap_orbit_mpi_send_receive_functions.hh
src/orbit/: Bunch.cc  Bunch.hh  OrbitConst.hh  SyncPart.cc  SyncPart.hh  wrap_bunch.cc  wrap_bunch.hh  wrap_syncpart.cc  wrap_syncpart.hh
src/spacecharge/: BaseBoundary2D.cc  BaseBoundary2D.hh  ForceSolver2D.cc  ForceSolver2D.hh  ForceSolverFFT2D.cc  ForceSolverFFT2D.hh  Grid1D.cc  Grid1D.hh  Grid2D.cc  Grid2D.hh  Grid3D.cc  Grid3D.hh  LSpaceChargeCalc.cc  LSpaceChargeCalc.hh  PoissonSolver2D.cc  PoissonSolver2D.hh  PoissonSolver3D.cc  PoissonSolver3D.hh  PoissonSolverFFT2D.cc  PoissonSolverFFT2D.hh  PoissonSolverFFT3D.cc  PoissonSolverFFT3D.hh  ShapedBoundary2D.cc  ShapedBoundary2D.hh  SpaceChargeCalc2p5D.cc  SpaceChargeCalc2p5D.hh  SpaceChargeCalc2p5Drb.cc  SpaceChargeCalc2p5Drb.hh  SpaceChargeCalc3D.cc  SpaceChargeCalc3D.hh  SpaceChargeCalcSliceBySlice2D.cc  SpaceChargeCalcSliceBySlice2D.hh  SpaceChargeCalcUnifEllipse.cc  SpaceChargeCalcUnifEllipse.hh  SpaceChargeForceCalc2p5D.cc  SpaceChargeForceCalc2p5D.hh  UniformEllipsoidFieldCalculator.cc  UniformEllipsoidFieldCalculator.hh  wrap_boundary2d.cc  wrap_boundary2d.hh  (+30 more)
src/teapot/: MatrixGenerator.cc  MatrixGenerator.hh  teapotbase.cc  teapotbase.hh  wrap_matrix_generator.cc  wrap_matrix_generator.hh  wrap_teapotbase.cc  wrap_teapotbase.hh
src/trackerrk4/: ExtEffectsContainer.cc  ExtEffectsContainer.hh  ExternalEffects.cc  ExternalEffects.hh  PyExternalEffects.cc  PyExternalEffects.hh  RungeKuttaTracker.cc  RungeKuttaTracker.hh  wrap_ext_effects_container.cc  wrap_ext_effects_container.hh  wrap_py_external_effects.cc  wrap_py_external_effects.hh  wrap_runge_kutta_tracker.cc  wrap_runge_kutta_tracker.hh  wrap_trackerrk4.cc  wrap_trackerrk4.hh
src/utils/: .wrap_py_base_field_source.cc.swp  AttributesBucket.cc  AttributesBucket.hh  BaseFieldSource.cc  BaseFieldSource.hh  BufferStore.cc  BufferStore.hh  CppPyWrapper.cc  CppPyWrapper.hh  FieldSourceContainer.cc  FieldSourceContainer.hh  MathPolynomial.cc  MathPolynomial.hh  OU_Function.cc  OU_Function.hh  OU_SplineCH.cc  OU_SplineCH.hh  PyBaseFieldSource.cc  PyBaseFieldSource.hh  Random.cc  Random.hh  StringUtils.cc  StringUtils.hh  bessel.cc  bessel.hh  tcomplex.hh  wrap_field_source_container.cc  wrap_field_source_container.hh  wrap_function.cc  wrap_function.hh  wrap_numrecipes.cc  wrap_numrecipes.hh  wrap_py_base_field_source.cc  wrap_py_base_field_source.hh  wrap_random.cc  wrap_random.hh  wrap_splinech.cc  wrap_splinech.hh  wrap_utils.cc  wrap_utils.hh
(+713 files in other folders)
