[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'PyORBIT'
dynamic = ["version"]
description = 'Use meson-python to build c++ anf python modules.'
requires-python = '>=3.9'
authors = [
  {name = 'Alexander Zhukov', email = 'zhukovap@ornl.gov'},
]


[tool.setuptools_scm]


